--- a/index.html
+++ b/index.html
@@ -3,9 +3,13 @@
 <head>
     <title>VDL Summer Fair Demo - Vandelanotte Security &amp; Privacy</title>
     <meta charset="utf-8"/>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
+    <meta name="viewport" content="width=width=device-width, initial-scale=1, user-scalable=yes"/>
     <link rel="stylesheet" type="text/css" href="/css/main.css">
+    <link rel="apple-touch-icon" href="/favicon.ico">
+    <link rel="icon" type="image/png" href="favicon.ico">
+    <link rel="mask-icon" href="/favicon.ico" color="#8BC9A5">
+    <link rel="shortcut icon" href="/favicon.ico">
 </head>
 <body>
 
